feat: 补全大部分功能